Set height: auto on open menu to prevent it from being too long

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -438,6 +438,7 @@ body {
         width: 260px;
         min-width: 160px;
         max-width: 90vw;
+        height: auto;
         max-height: calc(100vh - 80px);
         overflow-y: auto;
         padding: 16px 0;
